[package]
edition = "2021"
name = "value-expr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"], optional = true}
value = {path = "../value", optional = true}

[dev-dependencies]
value = {path = "../value", features = ["serde"]}

[features]
default = ["std", "value", "serde"]
std = []
