[package]
edition = "2021"
name = "value-invoke"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures-core = {version = "0.3"}
serde = {version = "1", default-features = false, features = ["alloc", "derive", "rc"]}
thiserror = "1"
value = {path = "../value", features = ["serde", "std"]}
value-macros = {path = "../value-macros", features = ["service"]}
value-validate = {path = "../value-validate", features = ["std", "serde", "derive"]}

[dev-dependencies]
futures-executor = "0.3"
serde_json = "1"
