[package]
edition = "2021"
name = "value-quickjs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
datetime = ["chrono", "value/datetime"]
default = []

[dependencies]
rquickjs = {version = "0.1", features = ["futures", "array-buffer"]}
value = {path = "../value"}
value-invoke = {path = "../value-invoke"}

value-validate = {path = "../value-validate", features = ["std", "serde", "derive"]}

chrono = {version = "0.4", optional = true}

[dev-dependencies]
rquickjs = {version = "0.1", features = ["futures", "parallel", "tokio"]}
tokio = {version = "1", features = ["macros", "rt"]}
value-invoke = {path = "../value-invoke", features = []}
