[package]
edition = "2021"
name = "value-types"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"], optional = true}
value = {path = "../value", features = ["std"]}

[features]
default = []
serde = ["dep:serde", "value/serde"]
