[package]
edition = "2021"
name = "value-validate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sealed = "0.4"
serde = {version = "1", default-features = false, features = ["derive", "alloc"], optional = true}
typetag = {version = "0.1", optional = true}
value = {path = "../value"}

value-macros = {path = "../value-macros", optional = true}

[dev-dependencies]
serde_json = "1"

[features]
default = []
derive = ["value-macros"]
serde = ["typetag", "value/serde", "dep:serde", "std"]
std = []
