[package]
edition = "2021"
name = "value"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", default-features = false, optional = true, features = ["serde"]}
ordered_float_lib = {version = "2", default-features = false, package = "ordered-float", optional = true}
serde_lib = {version = "1", default-features = false, features = ["alloc", "derive"], package = "serde", optional = true}
slog = {version = "2", optional = true}

[features]
default = ["datetime", "serde"]

datetime = ["chrono"]
ordered_float = ["ordered_float_lib"]
serde = ["serde_lib", "std"]
std = []
