[package]
edition = "2021"
name = "value"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4", default-features = false, optional = true, features = ["serde"]}
ordered_float_lib = {version = "2", default-features = false, package = "ordered-float", optional = true}
serde = {version = "1", default-features = false, features = ["alloc", "derive"], optional = true}
slog = {version = "2", optional = true}

[features]
datetime = ["chrono"]
default = []
full = [
  "datetime",
  "ordered_float",
  "serde",
]
ordered_float = ["ordered_float_lib"]
serde = ["dep:serde", "std"]
std = []
